--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>small-spring-step01</module>
         <module>small-spring-step02</module>
+        <module>small-spring-step03</module>
     </modules>
 
     <properties>
