FEAT:资源加载器解析文件注册对象

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>small-spring-step02</module>
         <module>small-spring-step03</module>
         <module>small-spring-step04</module>
+        <module>small-spring-step05</module>
     </modules>
 
     <properties>
