--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>small-spring-step03</module>
         <module>small-spring-step04</module>
         <module>small-spring-step05</module>
+        <module>small-spring-step06</module>
     </modules>
 
     <properties>
